layouts/style.css
/* Links */
a {
  text-decoration: none;
}

/* Reset */
body {
  margin: 0;
  font-family: sans-serif;
  display: flex;

  font-family: "EB Garamond", serif;
  font-optical-sizing: auto;
  /* font-weight: 400;
  font-style: normal; */
}
* {
  box-sizing: border-box;
}

#root {
  flex-grow: 1;
  display: flex;
  justify-content: center; /* Centering content horizontally */
  align-items: center; /* Centering content vertically */
}

/* Page Transition Animation */
#page-content {
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
}
body.page-is-transitioning #page-content {
  opacity: 0;
}

